--- a/MyListAnalyzer/misc/general-dashboard.css
+++ b/MyListAnalyzer/misc/general-dashboard.css
@@ -1,21 +1,6 @@
-
-.frenzy{
-    height: 35px;
-}
-
 .request-details{
     height: 200px;
     width: 100%;
-}
-
-.area-fix{
-    min-height: 100px;
-    margin-right: 10px;
-}
-
-.user-dash-general-lt-1{
-    margin-left: 1.3rem;
-    margin-right: 1.3rem;
 }
 
 .number-card{
@@ -81,19 +66,29 @@ article.expanding-row{
     font-size: 0.6rem;
 }
 
+.Overview-graphs{
+    border: 1.3px ridge rgba(250, 250, 250, 0.3);
+}
 
 div.Overview-graphs{
     height: calc(100vh - 43vh - 69px);
+    min-height: 200px;
 }    
 
 div.Overview-graphs[id^='{"index":1']{
     flex-grow: 2;
-    min-width: 40vw;
+    min-width: calc(200px + 25vw);
 }
 
-div.Overview-graphs[id^='{"index":2'],div.Overview-graphs[id^='{"index":3']{
+article.Overview-graphs[id^='{"index":2']{
+    max-width: 220px;
+    padding: 0px 10px;
+}
+
+
+div.Overview-graphs[id^='{"index":3']{
     /* current airing pie */
-    min-width: calc(100px + 7vw);
+    min-width: calc(150px + 3vw) !important;
     flex-grow: 1;
     box-sizing: border-box;
 }
