--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -1,3 +1,8 @@
+:root{
+    --card-border: 1px solid rgba(250, 250, 250, 0.3);
+}
+
+
 .request-details{
     height: 200px;
     width: 100%;
@@ -10,13 +15,18 @@
     flex-flow: column nowrap !important;
     justify-content: flex-start !important;
     
-    border: 1px solid var(--dark-black);
+    border: var(--card-border);
     background-color: transparent;
     flex-grow: 1;
     box-shadow: var(--hard-chocolate);
     margin: 0.4%;
     align-items: center;
     align-content: center;
+}
+
+
+.Overview-graphs:hover, .number-card:hover{
+    border: 1px ridge white;
 }
 
 .number-card-label{
@@ -66,13 +76,14 @@ article.expanding-row{
     font-size: 0.6rem;
 }
 
-.Overview-graphs{
-    border: 1.3px ridge rgba(250, 250, 250, 0.3);
+.number-card, .Overview-graphs{
+    border: var(--card-border);
+    border-radius: 12px;
 }
 
 div.Overview-graphs{
     height: calc(100vh - 43vh - 69px);
-    min-height: 200px;
+    min-height: 190px;
 }    
 
 div.Overview-graphs[id^='{"index":1']{
