--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -10,8 +10,8 @@
 
 .number-card{
     padding: 15px 20px;
-    min-width: 2vw;
-    min-height: calc(1vh + 69px - 1vh);
+    min-width: calc(1.5vw + 100px);
+    min-height: 50px;
     flex-flow: column nowrap !important;
     justify-content: flex-start !important;
     
@@ -27,6 +27,11 @@
 
 .Overview-graphs:hover, .number-card:hover{
     border: 1px ridge white;
+    box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
+}
+
+.number-card, .Overview-graphs{
+    transition: var(--standard-transition);
 }
 
 .number-card-label{
@@ -82,8 +87,8 @@ article.expanding-row{
 }
 
 div.Overview-graphs{
-    height: calc(100vh - 43vh - 69px);
-    min-height: 190px;
+    height: calc(100vh - 38vh - 75px);
+    min-height: 200px;
     padding: 10px;
     box-sizing: border-box;
 }    
