--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -117,11 +117,12 @@ div.Overview-graphs[id^='{"index":2']{
 
 .Recently.splide{
     box-sizing: border-box;
-    width: calc(100vw - 3px);
+    width: calc(100vw - 6px);
 }   
 
 .Recently.belt{
     width: 100%;
+    box-sizing: border-box;
     box-shadow: var(--hard-chocolate);
     padding: 10px;
     border: 1px solid transparent;
@@ -131,3 +132,24 @@ div.Overview-graphs[id^='{"index":2']{
     border: 1px solid silver;
     box-shadow: inset 0 0 0.5em 0 sliver, 0 0 0.5em 0 sliver;
 }
+
+.Recently.belt a{
+    max-width: calc((80vw - 10px) / 3);
+    white-space: nowrap; 
+    overflow: hidden;
+    text-align: left;
+    text-overflow: ellipsis;
+}
+
+@media only screen and (max-width: 720px){
+    .Recently.belt a{
+        max-width: calc((80vw - 10px) / 2);
+    }
+}
+
+@media only screen and (max-width: 420px){
+    .Recently.belt a{
+        max-width: calc((80vw - 10px) / 1.5);
+    }
+}
+
