Recently Tab is now ready
Bump to Version 0.3.0

--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -153,3 +153,9 @@ div.Overview-graphs[id^='{"index":2']{
     }
 }
 
+div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2'], div.Recently-graphs[id^='{"index":3']{
+    flex-grow: 2;
+    min-width: 200px !important;
+    min-height: 200px;
+    height: calc(90vh - 300px);
+}
