--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -9,7 +9,7 @@
 }
 
 .number-card{
-    padding: 15px 20px;
+    padding: 15px;
     min-width: calc(1.5vw + 100px);
     min-height: 50px;
     flex-flow: column nowrap !important;
@@ -59,11 +59,6 @@ article.expanding-row{
     row-gap: 6%;
     column-gap: 3px;
     align-content: center;
-}
-
-.no-data{
-    width: 25vw;
-    margin-top: 5vw;
 }
 
 .number-card-label{
@@ -118,7 +113,7 @@ div.Overview-graphs[id^='{"index":2']{
 .Recently.splide{
     box-sizing: border-box;
     width: calc(100vw - 6px);
-}   
+}
 
 .Recently.belt{
     width: 100%;
@@ -128,29 +123,21 @@ div.Overview-graphs[id^='{"index":2']{
     border: 1px solid transparent;
 }
 
+.Recently.belt a{
+    max-width: 220px;
+    padding: 0;
+    overflow: hidden;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+
 .Recently.belt:hover{
     border: 1px solid silver;
     box-shadow: inset 0 0 0.5em 0 sliver, 0 0 0.5em 0 sliver;
-}
-
-.Recently.belt a{
-    max-width: calc((80vw - 10px) / 3);
-    white-space: nowrap; 
-    overflow: hidden;
-    text-align: left;
-    text-overflow: ellipsis;
-}
-
-@media only screen and (max-width: 720px){
-    .Recently.belt a{
-        max-width: calc((80vw - 10px) / 2);
-    }
-}
-
-@media only screen and (max-width: 420px){
-    .Recently.belt a{
-        max-width: calc((80vw - 10px) / 1.5);
-    }
 }
 
 div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2'], div.Recently-graphs[id^='{"index":3']{
