--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -1,3 +1,6 @@
+@import url("/MLA/assets/user-view.css");
+@import url("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css");
+
 :root{
     --card-border: 1px solid rgba(250, 250, 250, 0.3);
 }
@@ -146,4 +149,53 @@ div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2'], di
 .scroll-board{
     height: calc(97vh - 20px);
     flex-shrink: 1;
+}
+
+
+
+div.Overview-graphs{
+    height: 245px;
+    /* min-height: 150px; */
+    padding: 10px;
+    box-sizing: border-box;
+}    
+
+div.Overview-graphs[id^='{"index":3'], div.Overview-graphs[id^='{"index":1']{
+    flex-grow: 1;
+    min-width: calc(169px + 1.75vw);
+    box-sizing: border-box;
+}
+
+
+div.Overview-graphs[id^='{"index":2']{
+    min-width: calc(200px + 1.75vw) !important;
+    flex-grow: 2;
+    box-sizing: border-box;
+}   
+
+.anime_card{
+    box-shadow: var(--bottom-lift)
+}
+
+.anime_card:hover{
+    box-shadow: var(--hard-chocolate);
+}
+
+
+#special_belt{
+    height: 130px;
+    width: 97vw;
+}
+
+
+.anime_card {
+  border: 1px solid rgba(150, 150, 150, 0.2);
+  border-radius: 5px;
+  transition: var(--standard-transition);
+  box-shadow: var(--hard-chocolate);
+}
+
+div.Overview-graphs:hover, .number-card:hover  , .anime_card:hover{
+    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1), transparent);
+    box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
