--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -1,10 +1,6 @@
 @import url("/MLA/assets/user-view.css");
 @import url("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css");
 
-:root{
-    --card-border: 1px solid rgba(250, 250, 250, 0.3);
-}
-
 
 .scroll-board{
     height: calc(97% - 20px) !important;
@@ -33,23 +29,17 @@
     flex-flow: column nowrap !important;
     justify-content: flex-start !important;
     
-    border: var(--card-border);
     background-color: transparent;
     flex-grow: 1;
-    box-shadow: var(--hard-chocolate);
     margin: 0.4%;
     align-items: center;
     align-content: center;
 }
 
 
-.Overview-graphs:hover, .number-card:hover{
+.Overview-graphs:hover, .number-card:hover, .Recently:hover{
     border: 1px ridge white;
     box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
-}
-
-.number-card, .Overview-graphs{
-    transition: var(--standard-transition);
 }
 
 .number-card-label{
@@ -57,7 +47,6 @@
     font-style: italic;
     text-align: center;
 }
-
   
 .percent-number {
     font: 690 20px system-ui;
@@ -108,47 +97,9 @@ article.expanding-row{
           animation: 1s wiggle ease infinite;
 }
 
-.Recently.splide{
-    box-sizing: border-box;
-    width: calc(100vw - 9px);
-}
-
-.Recently.belt{
-    width: 100%;
-    box-sizing: border-box;
-    box-shadow: var(--hard-chocolate);
-    padding: 10px;
-    border: 1px solid transparent;
-}
-
-.Recently.belt a{
-    max-width: 220px;
-    padding: 0;
-    overflow: hidden;
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-
-.Recently.belt:hover{
-    border: 1px solid silver;
-    box-shadow: inset 0 0 0.5em 0 sliver, 0 0 0.5em 0 sliver;
-}
-
-div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2'], div.Recently-graphs[id^='{"index":3']{
-    flex-grow: 2;
-    min-width: 200px !important;
-    min-height: 200px;
-    height: calc(90vh - 300px);
-}
-
-
 div.Overview-graphs{
     height: 245px;
-    /* min-height: 150px; */
+    min-height: 150px;
     padding: 10px;
     box-sizing: border-box;
 }    
@@ -174,21 +125,49 @@ div.Overview-graphs[id^='{"index":2']{
     box-shadow: var(--hard-chocolate);
 }
 
-
 #special_belt{
     height: 135px;
-    width: 97vw;
 }
 
 
-.anime_card {
+.anime_card, .Recently, .Overview-graphs, .number-card {
   border: 1px solid rgba(150, 150, 150, 0.2);
   border-radius: 5px;
   transition: var(--standard-transition);
   box-shadow: var(--hard-chocolate);
 }
 
-div.Overview-graphs:hover, .number-card:hover  , .anime_card:hover{
+div.Overview-graphs:hover, .number-card:hover  , .anime_card:hover, .Recently:hover{
     background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.1), transparent);
     box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.1);
+}
+
+
+
+div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2']{
+    height: 250px;
+    max-height: 300px;
+    width: 60vw;    
+}
+
+#weekly-progress-recently-view{
+    min-width: 250px;
+    width: calc(25vw - 30px);
+    max-height: 300px;
+    flex-grow: 1;
+}
+
+#weekly-progress-recently-view > article{
+    width: 100%;
+    height: 300px;
+}
+
+#special_belt{
+    width: calc(100vw - 28px);
+}
+
+@media only screen and (max-width: 750px){
+    div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2']{
+        width: calc(97vw - 28px);
+    }
 }
