--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -2,10 +2,7 @@
 @import url("https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css");
 
 
-.scroll-board{
-    height: calc(97% - 20px) !important;
-    flex-shrink: 1;
-}
+.scroll-board{height: calc(97% - 20px) !important; flex-shrink: 1;}
 
 .number-card{
     width: calc(1.5vw + 96px);
@@ -13,9 +10,7 @@
     max-width: 200px;
 }
 
-#time_spent{
-    width: 197px;
-}
+#time_spent{width: 197px;}
 
 #time_spent .swiper-slide{
     height: 45px;
@@ -37,25 +32,20 @@
 }
 
 
-.Overview-graphs:hover, .number-card:hover, .Recently:hover{
-    border: 1px ridge white;
-    box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
-}
-
 .number-card-label{
     font-size: 0.69rem;
     font-style: italic;
     text-align: center;
 }
   
-.percent-number {
-    font: 690 20px system-ui;
-}
+.percent-number {font: 690 20px system-ui;}
+.indicator-number{font-size: 0.6rem;}
 
-.indicator-number{
-    font-size: 0.6rem;
-}
 
+.Overview-graphs:hover, .number-card:hover, .Recently:hover{
+    border: 1px ridge white;
+    box-shadow: inset 0 0 0.5em 0 white, 0 0 0.5em 0 white;
+}
 
 article.expanding-row{
     display: flex;
@@ -68,67 +58,28 @@ article.expanding-row{
     align-content: center;
 }
 
-.number-card-label{
-    font-size: 0.69rem;
-    font-style: italic;
-    text-align: center;
-}
-
-  
-.percent-number {
-    font: 690 20px system-ui;
-}
-
-.indicator-number{
-    font-size: 0.6rem;
-}
 
 .number-card, .Overview-graphs{
     border: var(--card-border);
     border-radius: 12px;
 }
 
-.corner{
-    background-color: orangered;
-}
-
-.corner:hover{
-    -webkit-animation: 1s wiggle ease infinite;
-          animation: 1s wiggle ease infinite;
-}
-
-div.Overview-graphs{
+#ep_dist_overview_mla, #rating_dist_overview_mla{
+    width: calc(169px + 1.75vw);
+    box-sizing: border-box;
     height: 245px;
     min-height: 150px;
-    padding: 10px;
-    box-sizing: border-box;
-}    
-
-div.Overview-graphs[id^='{"index":3'], div.Overview-graphs[id^='{"index":1']{
-    flex-grow: 1;
-    min-width: calc(169px + 1.75vw);
-    box-sizing: border-box;
+    padding: 2px;
 }
 
+#rating_dist_overview_mla {flex-grow: .5;}
+#ep_dist_overview_mla{flex-grow: 1;}
 
-div.Overview-graphs[id^='{"index":2']{
-    min-width: calc(200px + 1.75vw) !important;
-    flex-grow: 2;
-    box-sizing: border-box;
-}   
+.anime_card{box-shadow: var(--bottom-lift);}
 
-.anime_card{
-    box-shadow: var(--bottom-lift)
-}
+.anime_card:hover{box-shadow: var(--hard-chocolate)}
 
-.anime_card:hover{
-    box-shadow: var(--hard-chocolate);
-}
-
-#special_belt{
-    height: 135px;
-}
-
+#special_belt{height: 135px; width: calc(100vw - 28px);}
 
 .anime_card, .Recently, .Overview-graphs, .number-card {
   border: 1px solid rgba(150, 150, 150, 0.2);
@@ -143,8 +94,6 @@ div.Overview-graphs:hover, .number-card:hover  , .anime_card:hover, .Recently:ho
     box-shadow: inset 5px 5px 20px rgba(255, 255, 255, 0.1);
 }
 
-
-
 div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2']{
     height: 250px;
     max-height: 300px;
@@ -156,10 +105,6 @@ div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2']{
     width: calc(25vw - 30px);
     height: 300px;
     flex-grow: 1;
-}
-
-#special_belt{
-    width: calc(100vw - 28px);
 }
 
 @media only screen and (max-width: 750px){
@@ -194,9 +139,7 @@ div.Recently-graphs[id^='{"index":1'], div.Recently-graphs[id^='{"index":2']{
     width: 85%;
 }
 
-.airing_cards{
-    min-width: 298px;
-}
+.airing_cards{min-width: 298px;}
 
 .rightFix{
     position: fixed;
