--- a/MyListAnalyzerDash/misc/general-dashboard.css
+++ b/MyListAnalyzerDash/misc/general-dashboard.css
@@ -115,7 +115,7 @@ article.expanding-row{
 #weekly-progress-recently-view{width: calc(150px + 30vw);height: 208px; flex-grow: 1;}
 #when-did-they-watch{height: 135px;}
 #quick-update-history{width: 98%; margin-left: 1%; height: 65%;}
-.number-card{width: calc(1.5vw + 96px);padding: 13px;}
+.number-card{width: calc(1.5vw + 96px);padding: 13px; max-height: 45px;}
 .number-card, #time_spent{
     max-width: 225px;
     flex-flow: column nowrap !important;
